# grafeo

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  README.md  _typos.toml  mkdocs.yml
crates/bindings/c/: Cargo.toml  README.md  grafeo.h
crates/bindings/c/src/: database.rs  types.rs
crates/bindings/node/: Cargo.toml  README.md  index.d.ts  index.js  package.json
crates/bindings/node/__test__/: index.spec.mjs
crates/bindings/node/npm/darwin-arm64/: package.json
crates/bindings/node/npm/darwin-x64/: package.json
crates/bindings/node/npm/linux-arm64-gnu/: package.json
crates/bindings/node/npm/linux-arm64-musl/: package.json
crates/bindings/node/npm/linux-x64-gnu/: package.json
crates/bindings/node/npm/win32-x64-msvc/: package.json
crates/bindings/node/src/: database.rs  graph.rs  lib.rs  transaction.rs  types.rs
crates/bindings/python/: Cargo.toml  README.md  pyproject.toml
crates/bindings/python/python/grafeo/: __init__.py
crates/bindings/python/src/: database.rs  graph.rs  lib.rs  query.rs  types.rs
crates/bindings/python/src/bridges/: algorithms.rs  networkx.rs  solvor.rs
crates/bindings/python/tests/: benchmark_phases.py  conftest.py  requirements.txt
crates/bindings/python/tests/bases/: __init__.py  bench_algorithms.py  bench_storage.py  test_admin.py  test_advanced_queries.py  test_algorithms.py  test_dataframe.py  test_filters.py  test_mutations.py  test_networkx.py  test_solvor.py  test_transactions.py
crates/bindings/python/tests/fixtures/: __init__.py  datasets.py  generators.py  utils.py
crates/bindings/python/tests/lpg/: __init__.py  conftest.py  test_compatibility.py
crates/bindings/python/tests/rdf/: __init__.py  conftest.py  test_compatibility.py
crates/bindings/wasm/: Cargo.toml  grafeo_wasm.d.ts  package-lite.json  package.json
crates/bindings/wasm/src/: lib.rs  types.rs
crates/bindings/wasm/tests/: web.rs
crates/grafeo/: Cargo.toml  README.md
crates/grafeo-adapters/: Cargo.toml
crates/grafeo-adapters/src/: lib.rs
crates/grafeo-adapters/src/plugins/: registry.rs  traits.rs
crates/grafeo-adapters/src/plugins/algorithms/: centrality.rs  (+10 more)
crates/grafeo-adapters/src/storage/: async_backend.rs  async_local.rs  memory.rs  mod.rs
crates/grafeo-adapters/tests/: golden_grafeo_file.rs  golden_wal_frames.rs  gql_fuzz_test.rs  sparql_parser_tests.rs  sparql_w3c_parser_tests.rs
crates/grafeo-adapters/tests/fixtures/: golden_v1.grafeo
crates/grafeo-cli/: Cargo.toml
crates/grafeo-cli/src/: main.rs  repl.rs
crates/grafeo-cli/src/commands/: backup.rs  compact.rs  data.rs  index.rs  info.rs  mod.rs  query.rs  schema.rs  stats.rs  validate.rs  wal.rs
crates/grafeo-cli/src/output/: mod.rs
crates/grafeo-cli/tests/: commands.rs
crates/grafeo-common/: Cargo.toml
crates/grafeo-common/benches/: arena_bench.rs
crates/grafeo-common/src/: collections.rs  lib.rs  mvcc.rs
crates/grafeo-common/src/memory/: arena.rs  mod.rs  pool.rs  reporter.rs  usage.rs
crates/grafeo-common/src/types/: date.rs  duration.rs  hlc.rs  id.rs  logical_type.rs  mod.rs  property_map.rs  time.rs  timestamp.rs  validity.rs  value.rs
crates/grafeo-common/src/utils/: error.rs  hash.rs
crates/grafeo-core/: Cargo.toml
crates/grafeo-core/benches/: compact_vs_lpg.rs  index_bench.rs
crates/grafeo-core/src/: lib.rs
crates/grafeo-core/src/execution/: adaptive.rs  chunk.rs  collector.rs  factorized_chunk.rs  factorized_iter.rs  pipeline.rs  selection.rs  source.rs  vector.rs
crates/grafeo-core/src/graph/: mod.rs  traits.rs
crates/grafeo-core/src/index/: adjacency.rs  hash.rs  mod.rs  trie.rs  zone_map.rs
crates/grafeo-core/src/statistics/: collector.rs  histogram.rs  rdf.rs
crates/grafeo-core/src/storage/: bitpack.rs  bitvec.rs  codec.rs  delta.rs  dictionary.rs  epoch_store.rs  mod.rs  runlength.rs
crates/grafeo-core/src/testing/: crash.rs  mod.rs
crates/grafeo-core/tests/: rdf_tests.rs
crates/grafeo-engine/: Cargo.toml
crates/grafeo-engine/benches/: query_bench.rs  serialization_bench.rs
crates/grafeo-engine/src/: admin.rs  cdc.rs  config.rs  database.rs  lib.rs  memory_usage.rs  metrics.rs  session.rs
crates/grafeo-engine/src/catalog/: check_eval.rs  mod.rs
crates/grafeo-engine/src/database/: admin.rs  async_ops.rs  async_wal_store.rs  cdc_store.rs  crud.rs  embed.rs  import.rs  index.rs  mod.rs  persistence.rs  query.rs  search.rs  wal_store.rs
crates/grafeo-engine/src/embedding/: config.rs  mod.rs  onnx.rs
crates/grafeo-engine/src/query/: binder.rs  cache.rs  cypher_translator.rs  gql_translator.rs  graphql_rdf_translator.rs  graphql_translator.rs  gremlin_translator.rs  mod.rs  plan.rs  planner.rs  planner_rdf.rs  processor.rs  profile.rs  sparql_translator.rs  sql_pgq_translator.rs  translator_common.rs
crates/grafeo-engine/src/session/: mod.rs  rdf.rs
crates/grafeo-engine/src/transaction/: manager.rs  mod.rs  mvcc.rs  parallel.rs  prepared.rs  write_tracker.rs
crates/grafeo-engine/tests/: async_storage.rs  backward_compatibility.rs  call_procedures.rs  cdc_crud_api.rs  cdc_session_mutations.rs  compact_store_integration.rs  concurrent_sessions.rs  coverage_aggregates.rs  coverage_load_data.rs  coverage_memory.rs  coverage_patterns.rs  coverage_schema_ddl.rs  coverage_session.rs  crash_injection_single_file.rs  database_api.rs  database_creation_options.rs  epoch_monotonicity.rs  error_paths.rs  expression_and_projection.rs  factorized_aggregation_test.rs  filter_pushdown.rs  generate_fixture.rs  golden_format.rs  gql_spec_compliance.rs  grafeo_file.rs  graph_benchmarks.rs  graphql.rs  graphql_probe2.rs  gremlin.rs  label_rollback.rs  lpg_graph_isolation.rs  memory_leak_detection.rs  merge_rollback.rs  mutation_planning.rs  mvcc_integration.rs  named_graphs.rs  null_and_coercion.rs  planner_coverage.rs  query_correctness.rs  query_processor_coverage.rs  (+33 more)
crates/grafeo-spec-tests/: Cargo.toml  build.rs
crates/grafeo-spec-tests/src/: lib.rs
crates/grafeo/src/: lib.rs
tests/fuzz/: Cargo.toml
tests/fuzz/fuzz_targets/: gql_parse_raw.rs  gql_parse_structured.rs
(+611 files in other folders)
