[package]
name = "grafeo-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Command-line interface for Grafeo graph database"

[[bin]]
name = "grafeo"
path = "src/main.rs"

[dependencies]
grafeo-engine = { workspace = true, features = ["wal", "parallel", "spill", "mmap"] }
grafeo-common = { workspace = true }

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Output formatting
comfy-table = "7"
serde = { workspace = true }
serde_json = "1"
is-terminal = "0.4"

# REPL
rustyline = "15"

# Progress bars
indicatif = "0.18"

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
default = ["gql"]
gql = ["grafeo-engine/gql"]
cypher = ["grafeo-engine/cypher"]
sparql = ["grafeo-engine/sparql"]
gremlin = ["grafeo-engine/gremlin"]
graphql = ["grafeo-engine/graphql"]
sql-pgq = ["grafeo-engine/sql-pgq"]
rdf = ["grafeo-engine/rdf"]
vector-index = ["grafeo-engine/vector-index"]
text-index = ["grafeo-engine/text-index"]
hybrid-search = ["grafeo-engine/hybrid-search"]
cdc = ["grafeo-engine/cdc"]
languages = ["gql", "cypher", "sparql", "gremlin", "graphql", "sql-pgq"]
ai = ["vector-index", "text-index", "hybrid-search", "cdc"]
full = ["languages", "ai", "rdf"]

[dev-dependencies]
tempfile = "3.24"

[lints]
workspace = true
