[package]
name = "grafeo-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core graph models, indexes, and execution primitives for Grafeo"

[dependencies]
grafeo-common.workspace = true

# Error handling
thiserror.workspace = true

# Data structures
smallvec.workspace = true
hashbrown.workspace = true
indexmap.workspace = true
dashmap.workspace = true
arcstr.workspace = true

# Hashing
ahash.workspace = true

# Serialization
serde.workspace = true
byteorder.workspace = true
bytes.workspace = true
bincode = { workspace = true, optional = true }

# Concurrency
parking_lot.workspace = true
crossbeam = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }

# Async (optional - used by spill module)
tokio = { workspace = true, optional = true }

# Regex
regex.workspace = true

# Vector index (optional)
ordered-float = { workspace = true, optional = true }
rand = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true
tempfile.workspace = true

[features]
default = ["parallel", "spill", "mmap"]
parallel = ["rayon", "crossbeam"]  # Morsel-driven parallelism (rayon, crossbeam work-stealing)
spill = ["tokio"]                  # Disk spilling for out-of-core execution
mmap = []                          # File-backed vector storage (MmapStorage)
rdf = []  # Enable RDF graph model
tiered-storage = ["grafeo-common/tiered-storage", "bincode"]  # Enable tiered hot/cold storage
succinct-indexes = []  # Enable succinct data structures (rank/select bitvectors, Elias-Fano, wavelet trees)
ring-index = ["succinct-indexes", "rdf"]  # Ring Index for RDF (3x space reduction, requires succinct-indexes and rdf)
vector-index = ["ordered-float", "rand"]  # HNSW vector index for approximate nearest neighbor search
text-index = []  # BM25 inverted index for full-text search
hybrid-search = ["text-index", "vector-index"]  # Combined text + vector search with score fusion

# Convenience groups
ai = ["vector-index", "text-index", "hybrid-search"]  # All AI/RAG search features

# Testing utilities (zero overhead when disabled)
testing-crash-injection = []  # Deterministic crash injection for recovery testing

[lints]
workspace = true

[[bench]]
name = "index_bench"
harness = false
