[package]
name = "grafeo-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Query engine and database management for Grafeo"

[dependencies]
grafeo-common.workspace = true
grafeo-core = { workspace = true, default-features = false }
grafeo-adapters = { workspace = true, default-features = false }

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Data structures
smallvec.workspace = true
hashbrown.workspace = true
indexmap.workspace = true

# Concurrency
parking_lot.workspace = true
crossbeam = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }

# Serialization
serde.workspace = true
bincode.workspace = true

# Regex for SPARQL FILTER
regex = "1"

# Tracing
tracing.workspace = true

# Embedding (optional, for ONNX embedding generation)
ort = { version = "2.0.0-rc.11", optional = true }
tokenizers = { version = "0.22", optional = true, default-features = false, features = ["onig"] }

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true
serde_json = "1"
tokio.workspace = true

[features]
default = ["gql", "parallel", "wal", "spill", "mmap"]
gql = ["grafeo-adapters/gql"]
cypher = ["grafeo-adapters/cypher"]
sparql = ["grafeo-adapters/sparql"]
gremlin = ["grafeo-adapters/gremlin"]
graphql = ["grafeo-adapters/graphql"]
sql-pgq = ["grafeo-adapters/sql-pgq"]  # SQL/PGQ (SQL:2023 GRAPH_TABLE)
rdf = ["grafeo-core/rdf", "grafeo-adapters/rdf"]  # RDF graph model and planner
parallel = ["rayon", "crossbeam", "grafeo-core/parallel", "grafeo-adapters/parallel"]  # Parallel execution
wal = ["grafeo-adapters/wal"]  # Write-ahead log storage
spill = ["grafeo-core/spill"]  # Disk spilling for out-of-core execution
mmap = ["grafeo-core/mmap"]  # File-backed vector storage
# Convenience groups
languages = ["gql", "cypher", "sparql", "gremlin", "graphql", "sql-pgq"]  # All query language parsers
ai = ["vector-index", "text-index", "hybrid-search", "cdc"]  # All AI/RAG features
full = ["languages", "ai", "rdf", "parallel", "wal", "spill", "mmap"]

# Search & AI features
vector-index = ["grafeo-core/vector-index"]  # HNSW vector index for k-NN search
text-index = ["grafeo-core/text-index"]  # BM25 inverted index for full-text search
hybrid-search = ["grafeo-core/hybrid-search", "text-index", "vector-index"]  # Combined text + vector search
cdc = []  # Change data capture with history API
embed = ["ort", "tokenizers"]  # ONNX embedding generation (opt-in, adds ~17MB)
block-stm = []  # Block-STM parallel transaction execution

[lints]
workspace = true

[[bench]]
name = "query_bench"
harness = false
