[package]
name = "grafeo-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for Grafeo graph database"

[lib]
name = "grafeo"
crate-type = ["cdylib"]
doc = false

[dependencies]
grafeo-engine = { path = "../../grafeo-engine" }
grafeo-core = { path = "../../grafeo-core" }
grafeo-common = { path = "../../grafeo-common" }
grafeo-adapters = { path = "../../grafeo-adapters" }
grafeo-bindings-common = { path = "../common" }

pyo3 = { workspace = true, features = ["extension-module"] }
pyo3-async-runtimes = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[features]
default = ["embedded"]
gql = ["grafeo-engine/gql"]
cypher = ["grafeo-engine/cypher"]
sparql = ["grafeo-engine/sparql", "grafeo-engine/rdf"]
gremlin = ["grafeo-engine/gremlin"]
graphql = ["grafeo-engine/graphql"]
sql-pgq = ["grafeo-engine/sql-pgq"]
vector-index = ["grafeo-engine/vector-index"]
text-index = ["grafeo-engine/text-index"]
hybrid-search = ["grafeo-engine/hybrid-search"]
cdc = ["grafeo-engine/cdc"]
embed = ["grafeo-engine/embed"]
algos = ["grafeo-engine/algos"]
rdf = ["grafeo-engine/rdf"]
temporal = ["grafeo-engine/temporal"]
languages = ["gql", "cypher", "sparql", "gremlin", "graphql", "sql-pgq"]
ai = ["vector-index", "text-index", "hybrid-search", "cdc"]
storage = ["grafeo-engine/storage"]
# Named profiles
embedded = ["gql", "ai", "algos", "grafeo-engine/parallel", "grafeo-engine/regex", "grafeo-engine/grafeo-file"]
full = ["languages", "ai", "algos", "rdf"]

[lints]
workspace = true
